Closed Bug 996433 Opened 10 years ago Closed 10 years ago

dom/media/MediaManager.cpp:400:11: error: 'webrtc' has not been declared (--disable-webrtc)

Categories

(Core :: WebRTC, defect)

Sun
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla31

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch v0 (obsolete) — Splinter Review
sparc, mips, aarch64, etc. and Solaris still default to --disable-webrtc.

In file included from dom/media/Unified_cpp_dom_media0.cpp:15:
dom/media/MediaManager.cpp:400:11: error: use of undeclared identifier
      'webrtc'
    mEcho(webrtc::kEcDefault),
          ^
dom/media/MediaManager.cpp:401:10: error: use of undeclared identifier
      'webrtc'
    mAgc(webrtc::kAgcDefault),
         ^
dom/media/MediaManager.cpp:402:12: error: use of undeclared identifier
      'webrtc'
    mNoise(webrtc::kNsDefault),
           ^
dom/media/MediaManager.cpp:560:29: error: use of undeclared identifier
      'webrtc'
    int32_t aec = (int32_t) webrtc::kEcUnchanged;
                            ^
dom/media/MediaManager.cpp:561:29: error: use of undeclared identifier
      'webrtc'
    int32_t agc = (int32_t) webrtc::kAgcUnchanged;
                            ^
dom/media/MediaManager.cpp:562:31: error: use of undeclared identifier
      'webrtc'
    int32_t noise = (int32_t) webrtc::kNsUnchanged;
                              ^
6 errors generated.

http://buildbot.rhaalovely.net/builders/mozilla-central-sparc64/builds/768/steps/build/logs/stdio
Attachment #8406642 - Flags: review?(rjesup)
Comment on attachment 8406642 [details] [diff] [review]
v0

In file included from content/media/Unified_cpp_content_media1.cpp:67:
content/media/MediaStreamGraph.cpp:31:10: fatal error:
      'AudioOutputObserver.h' file not found
#include "AudioOutputObserver.h"
         ^
1 error generated.
Attachment #8406642 - Attachment is obsolete: true
Attachment #8406642 - Flags: review?(rjesup)
This is not 'exotic-archs' only, it also breaks comm-central with --disable-webrtc for example...
Attached patch v1Splinter Review
Trying to follow ifdef style from MediaManager.h where AudioConfig is always exposed but doesn't do anything without MOZ_WEBRTC.

(In reply to Landry Breuil (:gaston) from comment #2)
> This is not 'exotic-archs' only, it also breaks comm-central with
> --disable-webrtc for example...

Why you need --disable-webrtc has nothing to do with comm-central: bug 911450 or bug 952828 comment 14.
Attachment #8409327 - Flags: review?(rjesup)
Attachment #8409327 - Flags: review?(rjesup) → review+
https://hg.mozilla.org/mozilla-central/rev/4d752223112e
Assignee: nobody → jbeich
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla31
You need to log in before you can comment on or make changes to this bug.