Bug 996433 - Sprinkle MOZ_WEBRTC ifdefs to unbreak --disable-webrtc after bug 694814. r=jesup