content/media/MediaStreamGraph.cpp
@@ -30,7 +30,9 @@
 #include "GeckoProfiler.h"
 #include "mozilla/unused.h"
 #include "speex/speex_resampler.h"
+#ifdef MOZ_WEBRTC
 #include "AudioOutputObserver.h"
+#endif
 
 using namespace mozilla::layers;
 using namespace mozilla::dom;
@@ -587,6 +589,7 @@ static void AudioMixerCallback(AudioDataValue* aMixedBuffer,
                                uint32_t aFrames)
 {
   // Need an api to register mixer callbacks, bug 989921
+#ifdef MOZ_WEBRTC
   if (aFrames > 0 && aChannels > 0) {
     // XXX need Observer base class and registration API
     if (gFarendObserver) {
@@ -594,6 +597,7 @@ static void AudioMixerCallback(AudioDataValue* aMixedBuffer,
                                     IdealAudioRate(), aChannels, aFormat);
     }
   }
+#endif
 }
 
 void
